--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"format": "biome format --write .",
 		"test": "node --test --experimental-test-coverage dist/**/*.test.js",
 		"pretest": "npm run build",
-		"prepublishOnly": "npm run build"
+		"prepublishOnly": "npm run build",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"@inquirer/prompts": "^7.9.0",
@@ -48,6 +49,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.2.6",
 		"@types/node": "^24.8.1",
+		"husky": "^9.1.7",
 		"typescript": "^5.9.3"
 	}
 }
