--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,13 @@
 name: Publish Package
+
 on:
   release:
     types: [published]
+
+permissions:
+  id-token: write # Required for OIDC for npm publishing
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,5 +22,3 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: npm ci
       - run: npm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
