fix publish job

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,11 +9,8 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v4
