--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,4 +18,4 @@ jobs:
           node-version: "22.x"
           registry-url: "https://registry.npmjs.org"
       - run: npm ci
-      - run: npm publish --provenance --access public
+      - run: npm publish --provenance
