--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,5 +17,7 @@ jobs:
         with:
           node-version: "22.x"
           registry-url: "https://registry.npmjs.org"
+      - name: Update npm
+        run: npm install -g npm@latest
       - run: npm ci
       - run: npm publish --provenance
