--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
 		"@inquirer/prompts": "^7.9.0",
 		"chalk": "^5.6.2",
 		"commander": "^14.0.1",
-		"execa": "^9.6.0"
+		"execa": "^9.6.0",
+		"omelette": "^0.4.17"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.2.6",
 		"@types/node": "^24.8.1",
+		"@types/omelette": "^0.4.5",
 		"husky": "^9.1.7",
 		"typescript": "^5.9.3"
 	}
