--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
 		"format": "biome format --write .",
-		"test": "node --test --experimental-test-coverage dist/**/*.test.js",
+		"test": "c8 node --test 'dist/**/*.test.js'",
 		"pretest": "npm run build",
 		"prepublishOnly": "npm run build",
 		"prepare": "husky"
@@ -51,6 +51,7 @@
 		"@biomejs/biome": "^2.2.6",
 		"@types/node": "^24.8.1",
 		"@types/omelette": "^0.4.5",
+		"c8": "^10.1.3",
 		"husky": "^9.1.7",
 		"typescript": "^5.9.3"
 	}
