--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@aurbano/twig",
-	"version": "1.3.1",
-	"description": "Lightweight CLI to manage multiple Git worktrees and isolated dev containers for LLM-friendly concurrent feature development.",
+	"version": "1.3.2",
+	"description": "CLI tool to manage multiple Git worktrees and isolated dev containers for LLM-friendly concurrent feature development.",
 	"keywords": [
 		"git",
 		"worktree",
